1-k8s-namespace-grafana.yml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-dev
  labels:
    app: grafana-dev
