3-k8s-service-grafana.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-dev-svc
  namespace: grafana-dev
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: grafana
